; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_synclink.c_save_tx_buffer_request.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_synclink.c_save_tx_buffer_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mgsl_struct = type { i64, i64, i64, %struct.tx_holding_buffer* }
%struct.tx_holding_buffer = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mgsl_struct*, i8*, i32)* @save_tx_buffer_request to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @save_tx_buffer_request(%struct.mgsl_struct* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.mgsl_struct*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.tx_holding_buffer*, align 8
  store %struct.mgsl_struct* %0, %struct.mgsl_struct** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load %struct.mgsl_struct*, %struct.mgsl_struct** %5, align 8
  %10 = getelementptr inbounds %struct.mgsl_struct, %struct.mgsl_struct* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load %struct.mgsl_struct*, %struct.mgsl_struct** %5, align 8
  %13 = getelementptr inbounds %struct.mgsl_struct, %struct.mgsl_struct* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = icmp uge i64 %11, %14
  br i1 %15, label %16, label %17

16:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %50

17:                                               ; preds = %3
  %18 = load %struct.mgsl_struct*, %struct.mgsl_struct** %5, align 8
  %19 = getelementptr inbounds %struct.mgsl_struct, %struct.mgsl_struct* %18, i32 0, i32 3
  %20 = load %struct.tx_holding_buffer*, %struct.tx_holding_buffer** %19, align 8
  %21 = load %struct.mgsl_struct*, %struct.mgsl_struct** %5, align 8
  %22 = getelementptr inbounds %struct.mgsl_struct, %struct.mgsl_struct* %21, i32 0, i32 2
  %23 = load i64, i64* %22, align 8
  %24 = getelementptr inbounds %struct.tx_holding_buffer, %struct.tx_holding_buffer* %20, i64 %23
  store %struct.tx_holding_buffer* %24, %struct.tx_holding_buffer** %8, align 8
  %25 = load i32, i32* %7, align 4
  %26 = load %struct.tx_holding_buffer*, %struct.tx_holding_buffer** %8, align 8
  %27 = getelementptr inbounds %struct.tx_holding_buffer, %struct.tx_holding_buffer* %26, i32 0, i32 0
  store i32 %25, i32* %27, align 4
  %28 = load %struct.tx_holding_buffer*, %struct.tx_holding_buffer** %8, align 8
  %29 = getelementptr inbounds %struct.tx_holding_buffer, %struct.tx_holding_buffer* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = load i8*, i8** %6, align 8
  %32 = load i32, i32* %7, align 4
  %33 = call i32 @memcpy(i32 %30, i8* %31, i32 %32)
  %34 = load %struct.mgsl_struct*, %struct.mgsl_struct** %5, align 8
  %35 = getelementptr inbounds %struct.mgsl_struct, %struct.mgsl_struct* %34, i32 0, i32 0
  %36 = load i64, i64* %35, align 8
  %37 = add i64 %36, 1
  store i64 %37, i64* %35, align 8
  %38 = load %struct.mgsl_struct*, %struct.mgsl_struct** %5, align 8
  %39 = getelementptr inbounds %struct.mgsl_struct, %struct.mgsl_struct* %38, i32 0, i32 2
  %40 = load i64, i64* %39, align 8
  %41 = add i64 %40, 1
  store i64 %41, i64* %39, align 8
  %42 = load %struct.mgsl_struct*, %struct.mgsl_struct** %5, align 8
  %43 = getelementptr inbounds %struct.mgsl_struct, %struct.mgsl_struct* %42, i32 0, i32 1
  %44 = load i64, i64* %43, align 8
  %45 = icmp uge i64 %41, %44
  br i1 %45, label %46, label %49

46:                                               ; preds = %17
  %47 = load %struct.mgsl_struct*, %struct.mgsl_struct** %5, align 8
  %48 = getelementptr inbounds %struct.mgsl_struct, %struct.mgsl_struct* %47, i32 0, i32 2
  store i64 0, i64* %48, align 8
  br label %49

49:                                               ; preds = %46, %17
  store i32 1, i32* %4, align 4
  br label %50

50:                                               ; preds = %49, %16
  %51 = load i32, i32* %4, align 4
  ret i32 %51
}

declare dso_local i32 @memcpy(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
